User Picker WiP

--- a/css/modals/_dialog.scss
+++ b/css/modals/_dialog.scss
@@ -79,6 +79,7 @@
 
 .modal-dialog-form {
     color: $modalTextColor;
+    margin-top: 5px;
 
     .input-control {
         background: $modalMockAKInputBackground;
